# styx

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile
.claude/: settings.local.json
.config/: dodeca.styx  dodeca.yaml
.config/captain/: config.styx
.config/squiggles/: config.styx
.config/tracey/: config.styx  config.yaml
.github/workflows/: ci.yml  npm-publish.yml  release.yml  website.yml
.handoffs/: 2026-01-18-182331-styx-embed-schema-gen.md  2026-01-21-101337-dibs-lsp-testing-harness.md
.zed/: settings.json
bindings/styx-js/: README.md  package.json
bindings/styx-js/src/: lexer.ts  parser.ts
bindings/styx-py/: README.md
compliance/: golden.sexp
crates/facet-styx/: Cargo.toml
crates/facet-styx/src/: error.rs  other_variant_test.rs  parser.rs  serializer.rs
crates/facet-styx/src/snapshots/: facet_styx__error__tests__missing_field_diagnostic.snap  facet_styx__tag_events_test__04_tag_sequence.snap  facet_styx__tag_events_test__04_tag_sequence.snap.new  facet_styx__tag_events_test__05_tag_struct.snap  facet_styx__tag_events_test__05_tag_struct.snap.new  facet_styx__tag_events_test__06_nested_unit_tags.snap  facet_styx__tag_events_test__06_nested_unit_tags.snap.new  facet_styx__tag_events_test__07_tag_struct_with_tag_value.snap  facet_styx__tag_events_test__07_tag_struct_with_tag_value.snap.new  facet_styx__tag_events_test__09_field_struct_tag.snap  facet_styx__tag_events_test__09_field_struct_tag.snap.new  facet_styx__tag_events_test__10_sequence_unit_tags.snap  facet_styx__tag_events_test__11_deeply_nested.snap  facet_styx__tag_events_test__11_deeply_nested.snap.new  facet_styx__tag_events_test__12_at_as_key.snap  facet_styx__tag_events_test__12_at_as_key.snap.new
crates/facet-styx/src/tests/: metadata.rs
crates/styx-cli/: Cargo.toml
crates/styx-cli/src/: main.rs
crates/styx-cst/: Cargo.toml
crates/styx-cst/src/: ast.rs  lib.rs  parser.rs  syntax_kind.rs
crates/styx-format/: Cargo.toml
crates/styx-format/proptest-regressions/: cst_format.txt
crates/styx-format/src/: cst_format.rs  options.rs  value_format.rs
crates/styx-gen-go/: CHANGELOG.md  Cargo.toml
crates/styx-lsp/: Cargo.toml
crates/styx-lsp-ext/: Cargo.toml
crates/styx-lsp/src/: extensions.rs  semantic_tokens.rs  server.rs
crates/styx-lsp/src/testing/: harness.rs  runner.rs
crates/styx-parse/: Cargo.toml
crates/styx-parse/examples/: compare.rs  debug_raw.rs  debug_tag.rs  dump_lexemes.rs  dump_tokens.rs  test_gap.rs
crates/styx-parse/src/: events.rs  lexer.rs  lib.rs  parser.rs  parser2.rs  parser3.rs  parser4.rs  tokenizer.rs
crates/styx-parse/src/parser/: mod.rs  tests.rs
crates/styx-parse/src/parser3/: tests.rs
crates/styx-parse/src/parser4/: tests.rs
crates/styx-schema/: Cargo.toml
crates/styx-schema/schema/: meta.gen.styx
crates/styx-schema/src/: error.rs  generate.rs  lib.rs  meta.rs  types.rs  validate.rs
crates/styx-schema/src/snapshots/: styx_schema__generate__tests__boxed_field.snap  styx_schema__generate__tests__enum_with_data.snap  styx_schema__generate__tests__field_with_default.snap  styx_schema__generate__tests__hashmap.snap  styx_schema__generate__tests__nested_types.snap  styx_schema__generate__tests__optional_field.snap  styx_schema__generate__tests__rename_all.snap  styx_schema__generate__tests__schema_file_type.snap  styx_schema__generate__tests__simple_enum.snap  styx_schema__generate__tests__simple_struct.snap  styx_schema__generate__tests__vec.snap  styx_schema__generate__tests__with_doc_comments.snap
crates/styx-schema/tests/: validation.rs
crates/styx-testhelpers/: CHANGELOG.md
crates/styx-testhelpers/src/: lib.rs
crates/styx-tokenizer/: CHANGELOG.md  Cargo.toml
crates/styx-tokenizer/src/: tokenizer.rs
crates/styx-tree/: Cargo.toml
crates/styx-tree/src/: builder.rs  diagnostic.rs  lib.rs
crates/styx-tree/src/snapshots/: styx_tree__diagnostic__tests__unclosed_object_diagnostic.snap  styx_tree__diagnostic__tests__unclosed_object_diagnostic.snap.new
crates/styx-wasm/src/: lib.rs
docs/templates/: monaco.html
implementations/styx-go/: compliance_test.go  parser.go
implementations/styx-js/src/: compliance.test.ts  parser.ts
implementations/styx-py/styx/: parser.py
implementations/styx-py/tests/: test_compliance.py
implementations/styx-swift/Sources/Styx/: Parser.swift
implementations/styx-swift/Tests/StyxTests/: ComplianceTests.swift
