[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["editors/zed-styx", "tools/styx-webmd"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/styx"

[workspace.dependencies]
# Error reporting
ariadne = "0.6"
strip-ansi-escapes = "0.2"

# Facet crates
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-format = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-testhelpers = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }

# CLI parsing
figue = { git = "https://github.com/bearcove/figue", branch = "main" }

# Tracing
tracing = "0.1"

# Testing
insta = "1"
proptest = "1"
similar = "2"

# Serialization
serde_json = "1"

# Internal crates
styx-tokenizer = { path = "crates/styx-tokenizer", version = "1.0" }
styx-parse = { path = "crates/styx-parse", version = "1.0" }
styx-format = { path = "crates/styx-format", version = "1.0" }
styx-tree = { path = "crates/styx-tree", version = "1.0" }
styx-cst = { path = "crates/styx-cst", version = "1.0" }
styx-lsp = { path = "crates/styx-lsp", version = "1.0" }
styx-embed = { path = "crates/styx-embed", version = "1.0" }
styx-gen-go = { path = "crates/styx-gen-go", version = "1.0" }
facet-styx = { path = "crates/facet-styx", version = "1.0" }
styx-testhelpers = { path = "crates/styx-testhelpers", version = "1.0" }

# Optimize WASM builds for size
[profile.release.package.styx-wasm]
opt-level = "s"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# # Uncomment to develop facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet" }
# facet-core = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-core" }
# facet-reflect = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-reflect" }
# facet-format = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-format" }
# facet-path = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-path" }
# facet-postcard = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-postcard" }
# facet-pretty = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-pretty" }
# facet-value = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-value" }
# facet-dessert = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-dessert" }
# facet-solver = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-solver" }
# facet-json = { path = "/Users/amos/.claude-worktrees/facet/exciting-mccarthy/facet-json" }
