[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["editors/zed-styx", "tools/styx-webmd"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/styx"

[workspace.dependencies]
# Error reporting
ariadne = "0.6"
strip-ansi-escapes = "0.2"

# Facet crates
facet = { version = "0.44" }
facet-core = { version = "0.44" }
facet-format = { version = "0.44" }
facet-reflect = { version = "0.44" }
facet-testhelpers = { version = "0.44" }
facet-json = { version = "0.44" }
facet-postcard = { version = "0.44" }

# CLI parsing
figue = { version = "2" }

# Roam RPC
roam = { version = "7" }
roam-types = { version = "7" }
roam-core = { version = "7" }
roam-stream = { version = "7" }

# Tracing
tracing = "0.1"

# Testing
insta = "1"
proptest = "1"
similar = "2"

# Serialization
serde_json = "1"

# Internal crates
styx-tokenizer = { path = "crates/styx-tokenizer", version = "3.0" }
styx-parse = { path = "crates/styx-parse", version = "3.0" }
styx-format = { path = "crates/styx-format", version = "3.0" }
styx-tree = { path = "crates/styx-tree", version = "3.0" }
styx-cst = { path = "crates/styx-cst", version = "3.0" }
styx-lsp = { path = "crates/styx-lsp", version = "3.0" }
styx-embed = { path = "crates/styx-embed", version = "3.0" }
styx-gen-go = { path = "crates/styx-gen-go", version = "3.0" }
facet-styx = { path = "crates/facet-styx", version = "3.0" }
styx-testhelpers = { path = "crates/styx-testhelpers", version = "3.0" }

# Optimize WASM builds for size
[profile.release.package.styx-wasm]
opt-level = "s"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# # Use local roam during v7 migration
# [patch."https://github.com/bearcove/roam"]
# roam = { path = "../roam/rust/roam" }
# roam-types = { path = "../roam/rust/roam-types" }
# roam-core = { path = "../roam/rust/roam-core" }
# roam-stream = { path = "../roam/rust/roam-stream" }

# # Uncomment to develop facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-format = { path = "../facet/facet-format" }
# facet-path = { path = "../facet/facet-path" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-value = { path = "../facet/facet-value" }
# facet-dessert = { path = "../facet/facet-dessert" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-json = { path = "../facet/facet-json" }
# facet-testhelpers = { path = "../facet/facet-testhelpers" }
